[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/menu.gd" type="Script" id=1]
[ext_resource path="res://PNG/Background/menu-2.png" type="Texture" id=2]
[ext_resource path="res://fonts/Acme-Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 90
outline_color = Color( 0.321569, 0.0862745, 0.74902, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 62
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 62
font_data = ExtResource( 3 )

[node name="menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1295.0
margin_bottom = 726.0
texture = ExtResource( 2 )
expand = true

[node name="CenterContainer" type="CenterContainer" parent="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect/CenterContainer"]
margin_left = 389.0
margin_top = 75.0
margin_right = 906.0
margin_bottom = 650.0
custom_constants/separation = 6

[node name="SpaceCrazy" type="Label" parent="TextureRect/CenterContainer/VBoxContainer"]
margin_right = 517.0
margin_bottom = 115.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.890196, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 0.796078, 0, 1 )
custom_colors/font_color_shadow = Color( 0.4, 0.4, 0.384314, 1 )
text = "Space Crazy"
align = 1
valign = 1
uppercase = true

[node name="comecar" type="Button" parent="TextureRect/CenterContainer/VBoxContainer"]
margin_top = 121.0
margin_right = 517.0
margin_bottom = 207.0
custom_fonts/font = SubResource( 2 )
text = "Começar"
flat = true

[node name="desafio" type="Button" parent="TextureRect/CenterContainer/VBoxContainer"]
visible = false
margin_top = 213.0
margin_right = 517.0
margin_bottom = 299.0
custom_fonts/font = SubResource( 2 )
text = "Desafio"
flat = true

[node name="opcoes" type="Button" parent="TextureRect/CenterContainer/VBoxContainer"]
margin_top = 213.0
margin_right = 517.0
margin_bottom = 299.0
custom_fonts/font = SubResource( 2 )
text = "Opções"
flat = true

[node name="ajuda" type="Button" parent="TextureRect/CenterContainer/VBoxContainer"]
margin_top = 305.0
margin_right = 517.0
margin_bottom = 391.0
custom_fonts/font = SubResource( 2 )
text = "Ajuda"
flat = true

[node name="sobre" type="Button" parent="TextureRect/CenterContainer/VBoxContainer"]
margin_top = 397.0
margin_right = 517.0
margin_bottom = 483.0
custom_fonts/font = SubResource( 2 )
text = "Sobre"
flat = true

[node name="sair" type="Button" parent="TextureRect/CenterContainer/VBoxContainer"]
margin_top = 489.0
margin_right = 517.0
margin_bottom = 575.0
custom_fonts/font = SubResource( 3 )
text = "Sair"
flat = true

[node name="pontos" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
[connection signal="pressed" from="TextureRect/CenterContainer/VBoxContainer/comecar" to="." method="_on_comecar_pressed"]
[connection signal="pressed" from="TextureRect/CenterContainer/VBoxContainer/desafio" to="." method="_on_desafio_pressed"]
[connection signal="pressed" from="TextureRect/CenterContainer/VBoxContainer/opcoes" to="." method="_on_opcoes_pressed"]
[connection signal="pressed" from="TextureRect/CenterContainer/VBoxContainer/ajuda" to="." method="_on_ajuda_pressed"]
[connection signal="pressed" from="TextureRect/CenterContainer/VBoxContainer/sobre" to="." method="_on_sobre_pressed"]
[connection signal="pressed" from="TextureRect/CenterContainer/VBoxContainer/sair" to="." method="_on_sair_pressed"]
